# nlpsig

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  classification_utils.py  dataset.py  environment.yml  ffn.py  noxfile.py  pathbert_main.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: authors.rst  classification_utils.rst  conf.py  data_preparation.rst  dimensionality_reduction.rst  encode_text.rst  index.rst
nlpsig/: __init__.py  classification_utils.py  data_preparation.py  deepsignatureffn.py  deepsignet.py  dimensionality_reduction.py  dyadic_path.py  encode_text.py  ffn.py  focal_loss.py  huggingface_loader.py  plot_embedding.py  pytorch_utils.py  timeinjection.py
notebooks/: pathbert_main.ipynb  pathbert_talklife_deepsignature.ipynb  pre_comp_emb.pkl
notebooks/alphabet_example/: alphabet_analysis.ipynb  lang_utils.py  load_data.py
notebooks/manifestos/: manifesto_topic_switching_binary.ipynb
notebooks/manifestos/data/: 51110_201505.csv  51110_201706.csv  51110_201912.csv  51210_201505.csv  51210_201706.csv  51210_201912.csv  51320_201505.csv  51320_201706.csv  51320_201912.csv  51340_201505.csv  51340_201912.csv  51421_201505.csv  51421_201706.csv  51421_201912.csv  51430_201912.csv  51620_201505.csv  51620_201706.csv  51620_201912.csv  51621_201505.csv  51901_201505.csv  51901_201706.csv  51901_201912.csv  51902_201505.csv  51902_201706.csv  51902_201912.csv  51903_201505.csv  51903_201706.csv  51903_201912.csv  51951_201505.csv  51951_201706.csv
notebooks/project_gutenberg/: author_prediction.ipynb
src/: __init__.py  classification_utils.py  dataset.py  dimensionality_reduction.py  dyadic_path.py  embeddings.py  encode_text.py  ffn.py  huggingface_loader.py  plot_embedding.py  timeinjection.py
src/nlpsig/: __init__.py  classification_utils.py  data_preparation.py  dimensionality_reduction.py  encode_text.py  plot_embedding.py
tests/: conftest.py  test_data_preparation.py  test_datasplit.py  test_dimensionality_reduction.py  test_folds.py  test_package.py  test_padding.py  test_path_construction.py
updates/: classification_utils.py  deepsignatureffn.py
