[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "nlpsig"
authors = [
  { name = "Ryan Chan", email = "rchan@turing.ac.uk" },
  { name = "Talia Tseriotou", email = "t.tseriotou@qmul.ac.uk" },
  { name = "Kasra Hosseini", email = "khosseini@turing.ac.uk" },
  { name = "Nathan Simpson", email = "nsimpson@turing.ac.uk" },
]
description = "Path signatures for Natural Language Processing."
readme = "README.md"
requires-python = ">=3.8, <3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "torch >= 1.9.0",
    "sentence-transformers >= 2.2.2",
    "matplotlib >= 3.6.2",
    "tdqm >= 0.0.1",
    "pandas >= 1.5.1",
    "umap-learn >= 0.5.3",
    "scikit-learn >= 1.1.3",
    "datasets >= 2.6.1",
    "distinctipy >= 1.2.2",
    "transformers >= 4.27.3",
    "evaluate >= 0.4.0",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
  "furo",
]

[project.urls]
Homepage = "https://github.com/datasig-ac-uk/nlpsig"
"Bug Tracker" = "https://github.com/datasig-ac-uk/nlpsig/issues"
Discussions = "https://github.com/datasig-ac-uk/nlpsig/discussions"
Changelog = "https://github.com/datasig-ac-uk/nlpsig/releases"
[tool.hatch]
version.path = "src/nlpsig/__init__.py"
envs.default.dependencies = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:Tensorflow not installed; ParametricUMAP will be unavailable:ImportWarning", # umap
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning", # umap
    "ignore:Deprecated call to *:DeprecationWarning",
    "ignore:numba.core.errors.NumbaDeprecationWarning", # umap using numba
    "ignore:numba.core.errors.NumbaPendingDeprecationWarning", # umap using numba
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.8"
# warn_unused_configs = true
# strict = true
# show_error_codes = true
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# warn_unreachable = true


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
#  "T20",         # flake8-print, turned off for now (replace w/ logging)
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
#  "PD",          # pandas-vet, turned off for now (df var name)
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
]
target-version = "py38"
typing-modules = ["nlpsig._compat.typing"]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths= ["src/nlpsig/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
